--- a/templates/etc/audit/auditd.conf.j2
+++ b/templates/etc/audit/auditd.conf.j2
@@ -12,10 +12,10 @@ name_format = NONE
 max_log_file = 6
 max_log_file_action = keep_logs
 space_left = 75
-space_left_action = SYSLOG
+space_left_action = email
 action_mail_acct = root
 admin_space_left = 50
-admin_space_left_action = SUSPEND
+admin_space_left_action = SYSLOG
 disk_full_action = SUSPEND
 disk_error_action = SUSPEND
 ##tcp_listen_port =
