--- a/templates/etc/modprobe.d/modprobe.j2
+++ b/templates/etc/modprobe.d/modprobe.j2
@@ -1,4 +1,5 @@
-{{ ansible_managed | comment }}
+# 2.2 Disable file_system
+{{ ansible_managed | comment }} 
 
 {% for fs in os_unused_filesystems | difference(os_filesystem_whitelist) %}
 install {{fs}} /bin/true
