--- a/templates/etc/login.defs.j2
+++ b/templates/etc/login.defs.j2
@@ -105,18 +105,18 @@ PASS_MIN_DAYS {{ os_auth_pw_min_age }}
 PASS_WARN_AGE	7
 
 # Min/max values for automatic uid selection in useradd
-UID_MIN			 {{ os_auth_uid_min }}
-UID_MAX			60000
+#UID_MIN			 {{ os_auth_uid_min }}
+#UID_MAX			60000
 # System accounts
-SYS_UID_MIN		  {{ os_auth_sys_uid_min }}
-SYS_UID_MAX		  {{ os_auth_sys_uid_max }}
+#SYS_UID_MIN		  {{ os_auth_sys_uid_min }}
+#SYS_UID_MAX		  {{ os_auth_sys_uid_max }}
 
 # Min/max values for automatic gid selection in groupadd
-GID_MIN			 {{ os_auth_gid_min }}
-GID_MAX			60000
+#GID_MIN			 {{ os_auth_gid_min }}
+#GID_MAX			60000
 # System accounts
-SYS_GID_MIN		  {{ os_auth_sys_gid_min }}
-SYS_GID_MAX		  {{ os_auth_sys_gid_max }}
+#SYS_GID_MIN		  {{ os_auth_sys_gid_min }}
+#SYS_GID_MAX		  {{ os_auth_sys_gid_max }}
 
 # Max number of login retries if password is bad. This will most likely be overriden by PAM, since the default pam_unix module has it's own built in of 3 retries. However, this is a safe fallback in case you are using an authentication module that does not enforce PAM_MAXTRIES.
 LOGIN_RETRIES		{{ os_auth_retries }}
